<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">My Form</string>

    <string name="text_input_first_name">First Name</string>
    <string name="text_input_last_name">Last Name</string>
    <string name="text_input_email">Email</string>
    <string name="text_input_phone">Phone</string>
    <string name="text_input_password">Password</string>
    <string name="button_to_summary">To Summary</string>
    <string name="spinner_title" tools:ignore="ExtraTranslation">Title:</string>
    <string name="text_view_email">Email</string>
    <string name="text_view_phone">Phone:</string>
</resources>